services/foundry/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry-deployment
  namespace: foundry
  labels:
    app: foundry
spec:
  selector:
    matchLabels:
      app: foundry
  template:
    metadata:
      labels:
        app: foundry
    spec:
      volumes:
        - name: foundry-data
          persistentVolumeClaim:
            claimName: foundry-pvc
      containers:
        - name: foundry
          image: felddy/foundryvtt:10.303
          ports:
            - containerPort: 30000
              name: http
          volumeMounts:
            - mountPath: /data
              name: foundry-data
