services/foundry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundry-svc
  namespace: foundry
spec:
  selector:
    app: foundry
  ports:
    - port: 80
      name: http
      targetPort: http
